# sparkle

./: .bazelrc  .bazelrc.local  .gitignore  .gitmodules  BUILD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Setup.hs  Sparkle.hs  Sparkle_run.hs  WORKSPACE  build.gradle  build.sh  circle.yml  entrypoint.py  findLib.sh  findLibDir.sh  nixpkgs.nix  pom.xml  run.sh  settings.gradle  shell-8.0.2.nix  shell-HEAD.nix  shell-linear-types.nix  shell-stack.nix  shell.nix  snapshot-9.0.1.yaml  spark-1.6.0.nix  sparkle.bzl  sparkle.cabal  stack-8.0.2.yaml  stack-HEAD.yaml  stack.yaml  wercker.yml
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/workflows/: bazel-buid-test-workflow.yaml  buid-test-workflow.yaml  build.yml
apps/als/: SparkALS.hs  als.cabal
apps/argv/: Argv.hs  BUILD.bazel  LICENSE  argv.cabal
apps/bench/: BUILD.bazel  Main.hs  Setup.hs  bench.cabal  build.gradle
apps/dataframe/: BUILD.bazel  LICENSE  Main.hs  dataframe.cabal
apps/dataframe-safe/: BUILD.bazel  Main.hs
apps/deltalake/: BUILD.bazel  SparkDelta.hs
apps/deltalake-glow/: BUILD.bazel  DeltalakeGlow.hs  Main.hs  continuous-phenotypes.csv  covariates.csv  genotypes.vcf
apps/hello/: BUILD.bazel  HelloSpark.hs  LICENSE  hello.cabal  lorem-ipsum.txt
apps/hello-deltalake/: BUILD.bazel  Main.hs
apps/hello-safe/: BUILD.bazel  HelloSparkSafe.hs
apps/lda/: BUILD.bazel  Main.hs  SparkLDA.hs  lda.cabal
apps/memerr/: .Main.hs  BUILD.bazel  Main.hs  README.md
apps/memerr-safe/: BUILD.bazel  Main.hs  README.md
apps/osthreads/: BUILD.bazel  Main.hs  osthreads.cabal  osthreads.hs  scheduler-pool.xml
apps/rdd-ops/: BUILD.bazel  Main.hs  RDDOps.hs  rdd-ops.cabal
apps/rdd-ops-safe/: BUILD.bazel  Main.hs
apps/use-after-free/: BUILD.bazel  Main.hs  README.md  null-pointer.txt  sigsegv.txt
cbits/: bootstrap.c  io_tweag_sparkle_Sparkle.h  iterator.c
config_settings/: setup.bzl
doc/: design.md  spark-notes.md
examples/hello/: HelloSpark.hs  hello.cabal
examples/hello/cbits/: HaskellRTS.c  HaskellRTS.h  JVM.c
examples/lda/: SparkLDA.hs  lda.cabal
examples/lda/cbits/: HaskellRTS.c  HaskellRTS.h  Java.h
examples/src/main/java/: HaskellRTS.java  Helper.java
hs-wrapper/: FFIWrapper.hs
inline-java/: LICENSE  README.md  inline-java.cabal
inline-java/src/Foreign/: JNI.hs  Java.hs
inline-java/src/Foreign/JNI/: String.hs  Types.hs
inline-java/src/Foreign/Java/: Types.hs
inline-java/src/Language/: Java.hs
inline-java/src/Language/Java/: Inline.hs
inline-java/tests/: Main.hs  Spec.hs
inline-java/tests/Language/: JavaSpec.hs
inline-java/tests/Language/Java/: InlineSpec.hs
java-to-haskell/: README.md  java-to-haskell.cabal
java-to-haskell/cbits/: java.c
java-to-haskell/javabits/: Hello.java
java-to-haskell/src/: JVM.hs
jni/: LICENSE  README.md  jni.cabal
jni/src/Foreign/JNI/: Types.hs
posts/: hello-sparkle.md
simple-c-export/: HelloInvoke.c  HelloInvoke.java  README.md  Spark.hs  simple-c-export.cabal  simple-run-closure.c  simple.c  simple_write_closure.hs
simple-java-export/: HelloInvoke.c  HelloInvoke.java  README.md  simple-c-export.cabal  simple-run-closure.c  simple_run_closure.hs  stack.yaml
simple-java-export/hs-invoke/: HelloInvoke.c  Spark.hs  hs-invoke.cabal
simple-java-export/hs-invoke-bin/: hs-invoke-bin.cabal
simple-spark-app/: README.md  findLib.sh  pom.xml  shell.nix  stack.yaml
simple-spark-app/hs-invoke/: HaskellRTS.c  HelloInvoke.c  Simple.hs  Spark.hs  hs-invoke.cabal
simple-spark-app/hs-invoke-bin/: hs-invoke-bin.cabal  simple_run_closure.hs  simple_write_closure.hs
simple-spark-app/src/main/java/: HaskellRTS.java  HelloInvoke.java
spark/: HaskellRTS.c  HaskellRTS.h  JVM.h  README.md  SparkClasses.c  SparkClasses.h  findLib.sh  findLibDir.sh  pom.xml  spark.cabal
spark/cbits/: Closure_stub.h  HaskellRTS.c  JVM.h  Java.c  Java.h
spark/documents/: agda.txt  animals1.txt  animals2.txt  bbking.txt  cities2.txt  direstraits.txt  galaxy.txt  grasshopper_mouse.txt  haskell.txt  rat.txt  solar_system.txt
spark/posts/: hello-sparkle.md
spark/scala_version/: simple.sbt
spark/scala_version/documents/: cities1.txt
spark/scala_version/src/main/scala/: spark_lda.scala
spark/src/: Closure.hs  JNI.hs  Spark.hs
spark/src/Control/Distributed/: Spark.hs
spark/src/Control/Distributed/Spark/: Closure.hs  JNI.hs
spark/src/main/java/: HaskellRTS.java  Helper.java
sparkle/: README.md  copy-exe.sh  findLibDir.sh  pom.xml  sparkle.cabal  stopwords.txt
sparkle/cbits/: Closure_stub.h  Java.c  Java.h  bootstrap.c  rts.c  sparkle.h
sparkle/src/Control/Distributed/: Spark.hs
sparkle/src/Control/Distributed/Spark/: Closure.hs  Context.hs  JNI.hs  PairRDD.hs  RDD.hs
sparkle/src/Control/Distributed/Spark/ML/: LDA.hs
sparkle/src/Control/Distributed/Spark/ML/Feature/: CountVectorizer.hs  RegexTokenizer.hs  StopWordsRemover.hs
sparkle/src/Control/Distributed/Spark/SQL/: Context.hs  DataFrame.hs  Row.hs
sparkle/src/Foreign/: Java.hs
sparkle/src/Foreign/Java/: Internal.hs  Types.hs
sparkle/src/main/java/: HaskellRTS.java  Helper.java  SparkMain.java
sparkle/src/main/java/io/tweag/sparkle/: SparkMain.java  Sparkle.java
sparkle/src/main/java/io/tweag/sparkle/function/: HaskellFunction.java  HaskellFunction3.java  HaskellFunction4.java  HaskellVoidFunction.java
src/Control/Distributed/: Spark.hs
src/Control/Distributed/Spark/: Closure.hs  Context.hs  Iterator.hs  Jars.hs  PairRDD.hs  RDD.hs
src/Control/Distributed/Spark/ML/: ALS.hs  LDA.hs  LinearRegressionGwas.hs  Rating.hs
src/Control/Distributed/Spark/ML/Feature/: CountVectorizer.hs  RegexTokenizer.hs  StopWordsRemover.hs
src/Control/Distributed/Spark/SQL/: Column.hs  Context.hs  DataFrame.hs  DataType.hs  Dataset.hs  Encoder.hs  Metadata.hs  Row.hs  SparkSession.hs  StructField.hs  StructType.hs
src/Language/Scala/: Tuple.hs
src/common/Control/Distributed/Spark/: .Safe.hs
src/linear-types/Control/Distributed/Spark/: Safe.hs
src/linear-types/Control/Distributed/Spark/Safe/: Closure.hs  Context.hs  PairRDD.hs  (+1 more)
src/main/java/: Helper.java
(+28 files in other folders)
