name:                sparkle
version:             0.3
synopsis:            Distributed Apache Spark applications in Haskell
description:         See README.md
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 EURL Tweag
category:            FFI, JVM, Java, Distributed Computing
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:
  cbits/io_tweag_sparkle_Sparkle.h
  src/main/java/io/tweag/sparkle/Sparkle.java
  src/main/java/io/tweag/sparkle/SparkMain.java
  src/main/java/io/tweag/sparkle/function/HaskellVoidFunction.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction4.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction0.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction2.java
  src/main/java/io/tweag/sparkle/function/HaskellFlatMapFunction.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction3.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction.java
  src/main/java/Helper.java
  README.md
data-dir: build/libs
data-files: sparkle.jar

source-repository head
  type:     git
  location: https://github.com/tweag/sparkle
  subdir:   sparkle

library
  include-dirs: cbits
  c-sources: cbits/bootstrap.c
  cc-options: -Wall -Werror
  exposed-modules:
    Control.Distributed.Spark
    Control.Distributed.Spark.Closure
    Control.Distributed.Spark.Context
    Control.Distributed.Spark.ML.Feature.CountVectorizer
    Control.Distributed.Spark.ML.Feature.RegexTokenizer
    Control.Distributed.Spark.ML.Feature.StopWordsRemover
    Control.Distributed.Spark.ML.LDA
    Control.Distributed.Spark.PairRDD
    Control.Distributed.Spark.SQL.Context
    Control.Distributed.Spark.SQL.DataFrame
    Control.Distributed.Spark.SQL.Row
    Control.Distributed.Spark.RDD
  build-depends:
    base >=4.8 && <5,
    binary >=0.7,
    bytestring >=0.10,
    distributed-closure >=0.3,
    jni >=0.1,
    jvm >=0.1,
    singletons >= 2.0,
    text >=1.2,
    vector >=0.11
  hs-source-dirs: src
  default-language: Haskell2010

executable sparkle
  main-is: Sparkle.hs
  other-modules: Paths_sparkle
  build-depends:
    base >= 4.8 && < 5,
    bytestring >= 0.10,
    filepath >= 1.4,
    process >= 1.2,
    regex-tdfa >= 1.2,
    sparkle,
    text >= 1.2,
    zip-archive >= 0.2
  default-language: Haskell2010
  ghc-options: -threaded
