name:                inline-java
version:             0.1
synopsis:            Java interop via inline Java code in Haskell modules.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/tweag/sparkle

library
  hs-source-dirs:      src
  cc-options: -std=c11
  exposed-modules:
    Language.Java
  build-depends:
    base >= 4.7 && < 5,
    binary >=0.7,
    bytestring >=0.10,
    containers >=0.5,
    distributed-closure >=0.3,
    jni >= 0.1,
    singletons >=2.0,
    text >=1.2,
    vector >=0.11
  default-language:    Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      tests
  other-modules: Language.JavaSpec
  main-is:
      Spec.hs
  build-depends:
      base
    , bytestring
    , hspec
    , inline-java
    , singletons
    , text
  default-language:
      Haskell2010