name:                inline-java
version:             0.1
synopsis:            Java interop via inline Java code in Haskell modules.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
extra-tmp-files:
  src/Foreign/JNI.c

source-repository head
  type:     git
  location: https://github.com/tweag/inline-java

library
  hs-source-dirs: src
  c-sources: src/Foreign/JNI.c
  cc-options: -std=c11
  extra-libraries: jvm
  exposed-modules:
    Foreign.JNI
    Foreign.JNI.Types
    Foreign.JNI.String
    Language.Java
  if impl(ghc >= 8.0.2)
    exposed-modules:
      Language.Java.Inline
  build-depends:
    base >= 4.7 && < 5,
    binary >=0.7,
    bytestring >=0.10,
    containers >=0.5,
    distributed-closure >=0.3,
    filepath >= 1,
    ghc-heap-view >= 0.5,
    inline-c >=0.5,
    language-java >= 0.2,
    monad-loops >= 0.4,
    process >= 1.2,
    singletons >= 2.0,
    syb >= 0.6,
    text >=1.2,
    template-haskell >= 2.10,
    temporary >= 1.2,
    thread-local-storage >=0.1,
    vector >=0.11
  default-language: Haskell2010

test-suite spec
  type:
    exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Language.JavaSpec
    Spec
  build-depends:
    base,
    bytestring,
    hspec,
    inline-java,
    singletons,
    text
  default-language: Haskell2010
