name:                java-to-haskell
version:             0.1
-- synopsis:            
-- description:         
homepage:            https://github.com/tweag/sparkle
license:             AllRightsReserved
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           Tweag I/O
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable java-to-haskell
  main-is: JVM.hs
  c-sources: cbits/java.c
  include-dirs: cbits
  includes: cbits/java.h
  extra-libraries: jvm
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
