name:                simple-c-export
version:             0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp.mestanogullari@tweag.io
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable simple-write-closure
  main-is: simple_write_closure.hs
  other-modules: Simple, Spark
  build-depends: base, binary, bytestring, distributed-closure
  default-language:    Haskell2010

executable simple-run-closure
  main-is: simple_run_closure.hs
  other-modules: Simple, Spark
  build-depends: base, binary, bytestring, distributed-closure
  default-language:    Haskell2010

executable simple-c
  main-is: simple-run-closure.c
  ghc-options: -no-hs-main
  other-modules: Simple, Spark
  build-depends: base, bytestring, binary, distributed-closure
  default-language:    Haskell2010
