name:                simple-c-export
version:             0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp.mestanogullari@tweag.io
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable simple-write-closure
  main-is: simple_write_closure.hs
  other-modules: Simple, Spark
  build-depends: base, binary, bytestring, distributed-closure
  default-language:    Haskell2010

executable simple-run-closure-hs
  main-is: simple_run_closure.hs
  other-modules: Simple, Spark
  build-depends: base, binary, bytestring, distributed-closure
  default-language:    Haskell2010

executable simple-run-closure-c
  main-is: simple-run-closure.c
  ghc-options: -no-hs-main
  other-modules: Simple, Spark
  build-depends: base, binary, bytestring, distributed-closure

library
  c-sources: HelloInvoke.c
  ghc-options: -fPIC -shared -dynamic
  include-dirs: /Library/Java/JavaVirtualMachines/jdk1.8.0_65.jdk/Contents/Home/include /Library/Java/JavaVirtualMachines/jdk1.8.0_65.jdk/Contents/Home/include/darwin
  exposed-modules: Simple, Spark
  build-depends: base, bytestring, binary, distributed-closure
  extra-libraries: HSrts-ghc7.10.2
  default-language:    Haskell2010
