name:                spark
version:             0.1
-- synopsis:
-- description:
license:             AllRightsReserved
author:              Tweag IO
maintainer:          m@tweag.io
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  c-sources: HaskellRTS.c
  ghc-options: -fPIC -shared -dynamic -threaded
  exposed-modules: Spark
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
