name:                spark
version:             0.1
-- synopsis:
-- description:
license:             AllRightsReserved
author:              Tweag IO
maintainer:          m@tweag.io
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  HaskellRTS.h, SparkClasses.h
cabal-version:       >=1.10

library
  c-sources: HaskellRTS.c, SparkClasses.c, src/Spark.c
  ghc-options: -fPIC -shared -dynamic -threaded
  exposed-modules: Spark
  other-modules: JNI
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    binary-serialise-cbor,
    bytestring,
    containers,
    distributed-closure,
    inline-c,
    vector
  hs-source-dirs:      src
  default-language:    Haskell2010
