name:                spark
version:             0.1
-- synopsis:
-- description:
license:             AllRightsReserved
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 Tweag I/O Ltd
-- category:
build-type:          Simple
extra-source-files:  cbits/JVM.h, cbits/Java.h
cabal-version:       >=1.10

library
  c-sources: cbits/Java.c, cbits/JVM.c
  cc-options: -Wall
  ghc-options: -fPIC -shared -dynamic -threaded -Wall
  exposed-modules: Control.Distributed.Spark
  other-modules: Closure JNI
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    binary,
    binary-serialise-cbor,
    bytestring,
    containers,
    distributed-closure,
    inline-c

  hs-source-dirs:      src
  default-language:    Haskell2010
