name:                sparkle
version:             0.1
license:             AllRightsReserved
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 Tweag I/O Ltd
build-type:          Simple
cabal-version:       >=1.10

library
  include-dirs: cbits
  c-sources: cbits/bootstrap.c src/Foreign/Java.c
  cc-options: -Wall
  exposed-modules:
    Control.Distributed.Spark
    Control.Distributed.Spark.Closure
    Foreign.Java
  other-modules:
    Foreign.Java.Types
  build-depends:
    base >=4.8 && <4.9,
    binary >=0.7,
    bytestring >=0.10,
    containers >=0.5,
    distributed-closure,
    inline-c >=0.5,
    text >=1.2,
    thread-local-storage >=0.1,
    vector >=0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
