name:                sparkle
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 Tweag I/O Ltd
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/tweag/sparkle
  subdir:   sparkle

library
  include-dirs: cbits
  c-sources: cbits/bootstrap.c
  cc-options: -Wall -Werror
  exposed-modules:
    Control.Distributed.Spark
    Control.Distributed.Spark.Closure
    Control.Distributed.Spark.Context
    Control.Distributed.Spark.ML.Feature.CountVectorizer
    Control.Distributed.Spark.ML.Feature.RegexTokenizer
    Control.Distributed.Spark.ML.Feature.StopWordsRemover
    Control.Distributed.Spark.ML.LDA
    Control.Distributed.Spark.PairRDD
    Control.Distributed.Spark.SQL.Context
    Control.Distributed.Spark.SQL.DataFrame
    Control.Distributed.Spark.SQL.Row
    Control.Distributed.Spark.RDD
  build-depends:
    base >=4.8 && <4.9,
    binary >=0.7,
    bytestring >=0.10,
    distributed-closure,
    inline-java >=0.1,
    text >=1.2,
    vector >=0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
