name:                als
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable sparkle-example-als
  main-is: SparkALS.hs
  build-depends:
    base >=4.7 && <5,
    choice,
    distributed-closure,
    jvm,
    MonadRandom,
    sparkle,
    text,
    vector
  default-language: Haskell2010
  ghc-options: -pie -dynamic -threaded
  ld-options: -Wl,-z,origin -Wl,-rpath,$ORIGIN
