package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_binary(
  name = "argv-hs",
  linkstatic = False,
  srcs = ["Argv.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
	"@stackage//:vector",
  ],
  compiler_flags = ["-threaded", "-pie"],
)

sparkle_package(
  name = "sparkle-example-argv",
  src = ":argv-hs",
)
