name: argv
version: 0.1
license: BSD3
license-file: LICENSE
author: LeapYear Technologies, Inc.
maintainer: Robin Bate Boerop <robin@leapyear.io>
copyright: 2016 LeapYear Technologies, Inc.
build-type: Simple
cabal-version: >=1.10

executable sparkle-example-argv
  main-is: Argv.hs
  build-depends: base >=4.7 && <5, distributed-closure, sparkle, text, vector
  default-language: Haskell2010
  ghc-options: -pie -dynamic -threaded
