package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "bench-hs",
  srcs = ["Main.hs"],
  plugins = ["@io_tweag_inline_java//:inline-java-plugin"],
  deps = [
    "//:sparkle-lib",
    "@maven//:org_apache_spark_spark_core_2_11",
    "@maven//:org_scala_lang_scala_library",
    "@maven//:org_scala_lang_scala_reflect",
    "@io_tweag_inline_java//:inline-java",
    "@io_tweag_inline_java//jvm",
	"@stackage//:base",
	"@stackage//:criterion",
	"@stackage//:distributed-closure",
	"@stackage//:text",
	"@stackage//:vector",
  ],
)

sparkle_package(
  name = "sparkle-benchmarks",
  src = ":bench-hs",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
