package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "dataframe",
  srcs = ["Main.hs"],
  deps = [
    "//:sparkle-lib",
    "@io_tweag_inline_java//jvm",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
)

sparkle_package(
  name = "sparkle-example-dataframe",
  src = ":dataframe",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
