name:                dataframe
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O, LeapYear Technologies
copyright:           2016 EURL Tweag, LeapYear Technologies, Inc.
build-type:          Simple
cabal-version:       >=1.10

executable sparkle-example-dataframe
  main-is: Main.hs
  build-depends:       base >=4.7 && <5, distributed-closure, jvm, sparkle, text
  default-language:    Haskell2010
  ghc-options: -dynamic -threaded
  if !os(darwin)
    ld-options: -pie -Wl,-z,origin -Wl,-rpath,$ORIGIN
