package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "hello-deltalake",
  srcs = ["HelloDeltalake.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@maven//:io_delta_delta_core_2_11",
  ],
)

sparkle_package(
  name = "sparkle-example-hello-deltalake",
  src = ":hello-deltalake",
)
