package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_binary(
  name = "hello-hs",
  linkstatic = False,
  srcs = ["HelloSpark.hs"],
  deps = [
    "//:sparkle-lib",
    "@io_tweag_inline_java//jni",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
  compiler_flags = ["-threaded", "-pie"],
)

sparkle_package(
  name = "sparkle-example-hello",
  src = ":hello-hs",
)
