package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_binary(
  name = "lda-hs",
  linkstatic = False,
  srcs = ["SparkLDA.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
  compiler_flags = ["-threaded", "-pie"],
)

sparkle_package(
  name = "sparkle-example-lda",
  src = ":lda-hs",
)
