package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "lda-hs",
  srcs = ["Main.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
)

sparkle_package(
  name = "sparkle-example-lda",
  src = ":lda-hs",
)
