package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_binary(
  name = "osthreads-hs",
  linkstatic = False,
  srcs = ["osthreads.hs"],
  deps = [
    "//:sparkle-lib",
    "@io_tweag_inline_java//jni",
    "@io_tweag_inline_java//jvm",
    "@io_tweag_inline_java//jvm-streaming",
	"@stackage//:base",
	"@stackage//:choice",
	"@stackage//:clock",
	"@stackage//:distributed-closure",
	"@stackage//:streaming",
	"@stackage//:text",
  ],
  compiler_flags = ["-threaded", "-pie"],
)

sparkle_package(
  name = "sparkle-example-osthreads",
  src = ":osthreads-hs",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
