package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "osthreads-hs",
  srcs = ["osthreads.hs"],
  deps = [
    "//:sparkle-lib",
    "@io_tweag_inline_java//jni",
    "@io_tweag_inline_java//jvm",
    "@io_tweag_inline_java//jvm-streaming",
	"@stackage//:base",
	"@stackage//:choice",
	"@stackage//:clock",
	"@stackage//:distributed-closure",
	"@stackage//:streaming",
	"@stackage//:text",
  ],
)

sparkle_package(
  name = "sparkle-example-osthreads",
  src = ":osthreads-hs",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
