package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_binary(
  name = "rdd-ops",
  linkstatic = False,
  srcs = ["RDDOps.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
  compiler_flags = ["-threaded", "-pie"],
)

sparkle_package(
  name = "sparkle-example-rddops",
  src = ":rdd-ops",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
