package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "rdd-ops",
  srcs = ["RDDOps.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
  ],
)

sparkle_package(
  name = "sparkle-example-rddops",
  src = ":rdd-ops",
  resource_jars = ["@io_tweag_inline_java//jvm-batching:jar"],
)
