package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

load("@//:sparkle.bzl", "sparkle_package")

haskell_library(
  name = "use-free-hs",
  srcs = ["Main.hs"],
  deps = [
    "//:sparkle-lib",
	"@stackage//:base",
	"@stackage//:distributed-closure",
	"@stackage//:text",
        "@stackage//:choice",
        "@stackage//:optparse-applicative",
        "@io_tweag_inline_java//jni",
        "@io_tweag_inline_java//jvm",
        "@io_tweag_inline_java//:inline-java",
  ],
)

sparkle_package(
  name = "use-free",
  src = ":use-free-hs",
)
