name:                lda
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 Tweag I/O Ltd
build-type:          Simple
cabal-version:       >=1.10

library
  c-sources:           cbits/HaskellRTS.c
  includes:            cbits/HaskellRTS.h
  exposed-modules:     SparkLDA
  build-depends:       base >=4.7 && <5, sparkle, distributed-closure
  default-language:    Haskell2010
  ghc-options:        -fPIC -shared -dynamic
