name:                lda
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 Tweag I/O Ltd
build-type:          Simple
cabal-version:       >=1.10

executable sparkle-example-lda
  main-is: SparkLDA.hs
  build-depends:       base >=4.7 && <5, distributed-closure, sparkle, text
  default-language:    Haskell2010
  ghc-options: -fPIC -dynamic -lpthread
  ld-options: -pie
